--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RecipeApp",
+  "name": "recipe-app",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -17,8 +17,11 @@
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
+    "@mui/material": "^6.1.5",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.3",
