--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^6.1.5",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
