--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
